# PGM---Pro-Gamer-Manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt
samples/: CMakeLists.txt
samples/PGM - Pro Gamer Manager/: CMakeLists.txt
samples/PGM - Pro Gamer Manager/assets/: main.css  main.html  start.html
samples/PGM - Pro Gamer Manager/src/: main.cpp
samples/PGM - Pro Gamer Manager/src/API/: PGM_API.cpp  PGM_API.h
samples/PGM - Pro Gamer Manager/src/LOL/: LOLJogador.cpp  LOLJogador.h  LOLTime.cpp  LOLTime.h
samples/PGM - Pro Gamer Manager/src/base/: JogadorBase.cpp  JogadorBase.h  TimeBase.cpp  TimeBase.h
samples/PGM - Pro Gamer Manager/src/engine/: EngineBase.cpp  EngineBase.h  LOLEngine.cpp  LOLEngine.h
samples/PGM - Pro Gamer Manager/src/interface/: LOLInterface.cpp  LOLInterface.h  interface_base.cpp  interface_base.h  interface_jogador.cpp  interface_jogador.h  interface_manager.cpp  interface_manager.h
samples/PGM - Pro Gamer Manager/src/ultralight/: ultralight.cpp  ultralight.h
src/: CMakeLists.txt  main.cpp
